content/sass/pages/online-services.scss
@use '../variables/colors' as *;
@use '../variables/misc' as *;
@use '../variables/type-vars' as *;


.intro {
    padding-block: var(--section-spacing-large) 0;
}


.table-container {
    background-color: $clr-neutral-200;
    padding: 1em 1em;
    width: 100%;
    border: 1px solid $border-dark-400;
}

.requests-table {
    width: 100%;
    font-size: $fs-400;
    color: $text-color-dark;
    border-collapse: collapse;

    th {
        text-align: start;
        font-size: $fs-500;
        font-family: 'Hk Grotesk';
        padding-bottom: 1em;
    }

    tr:not(:last-child) {
        border-bottom: 1px $clr-neutral-600 solid;
    }

    td {
        padding-block: 1em;
    }

    &__actions {
        display: flex;
        align-items: center;
        gap: 2em;
        flex-wrap: wrap;

        button {
            font-size: inherit;
        }
    }

    &__print-icon {
        display: inline-block;
        vertical-align: middle;
        margin-right: 0.35em;
        width: 30px;
        height: 30px;

        svg {
            width: 100%;
            height: 100%;
            fill: currentColor;
        }
    }

    &__row-label {
        display: none;
    }
}

.ongoing-requests {
    padding-bottom: var(--section-spacing-large);
}

@media screen and (max-width: 1100px) {
    .requests-table {
        font-size: $fs-300;

    }
}

@media screen and (max-width: 900px) {

    .table-container {
        padding: 0;
    }

    .requests-table__actions {
        max-width: none;
        display: flex;
    }

    .requests-table {
        font-size: $fs-400;
        display: block;

        thead,
        tbody,
        th,
        td,
        tr {
            display: block;
        }

        th {
            position: absolute;
            top: -9999px;
            left: -9999px;
        }

        td {
            border: none;
            position: relative;
            padding-inline: 1em;
            display: flex;
        }

        .has-label {
            &:before {
                box-sizing: border-box;
                position: absolute;
                display: none;
                top: 50%;
                padding-block: inherit;
                transform: translateY(-50%);
                left: 0;
                padding-left: 1em;
                white-space: nowrap;
            }
        }

        &__row-label {
            font-weight: bold;
            width: max(140px, 30%);
            display: block;
            flex-shrink: 0;
        }

        &__print-btn {
            font-size: $fs-100;
        }

        &__print-icon {
            width: 24px;
        }

        tr:nth-child(even) {
            // background-color: $clr-neutral-400;

        }


        tbody tr {
            padding-block: 2em;
        }
    }
}

@media screen and (max-width: 600px) {
    .requests-table {
        font-size: $fs-300;
    }
}

